refactor: Abstract common search functionality and improve scrolling